# argon

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  getting-started.rst  index.rst
docs/features/: datasets.rst  diffusion.rst  envs.rst  policy.rst  train.rst
notebooks/: bc_randomness.ipynb  dataset_explorer.ipynb  env_explorer.ipynb  test_tsne.ipynb
notebooks/common/: canvas.ipynb  train.ipynb
notebooks/diffusion/: gt_image_diffusion.ipynb  gt_simple_cond_diffusion.ipynb  high_dim_diffusion.ipynb  image_diffusion.ipynb  image_diffusion_forward.ipynb  inverting_one_way.ipynb
notebooks/env/: env_viewer.ipynb  interactive.ipynb  manipulation_poscontrol.ipynb  nonparametric.ipynb  pusht_collect.ipynb  pusht_diffusion.ipynb  reacher_collect.ipynb
old/cond-diffusion-toy/: pyproject.toml
old/cond-diffusion-toy/notebook/: final_plots.ipynb  inherent_bandwidth.ipynb  nw_trained_comparison.ipynb
old/cond-diffusion-toy/src/toy_diffusion/: data.py  main.py  perplexity.py
old/image-diffusion/: pyproject.toml
old/image-diffusion/notebooks/: check_linearity.ipynb  latent_embed.py  linearity.ipynb
old/image-diffusion/scripts/: image_diffusion
old/image-diffusion/src/image_diffusion/: eval.py  main.py
old/language-model/src/language_model/: main.py
projects/cond-diffusion-toy/notebook/: final_plots.ipynb  increasing_val_loss.ipynb  interp_comparison_mall.ipynb
projects/cond-diffusion-toy/scripts/: toy_diffusion  toy_perplexity
projects/image-classifier/: pyproject.toml
projects/image-classifier/scripts/: image_classifier
projects/image-classifier/src/image_classifier/: __init__.py
projects/image-diffusion/notebooks/: check_linearity.ipynb  linearity.ipynb  stable_diffusion.ipynb
projects/image-diffusion/scripts/: image_diffusion_eval
projects/image-diffusion/src/image_diffusion/: eval.py  main.py
projects/language-model/: pyproject.toml
projects/language-model/scripts/: language_model
projects/llm-trainer/: pyproject.toml
projects/llm-trainer/src/llm_trainer/: main.py
projects/llm-trainer/src/llm_trainer/datasets/: __init__.py  ops.py
projects/llm-trainer/src/llm_trainer/gemma/: helpers.py  layers.py  modules.py  params.py  positional_embeddings.py  sampler.py  sow_lib.py  transformer.py
projects/policy-bench/: pyproject.toml  run_lower_bounds.sh
projects/policy-bench/notebooks/: final_plots.ipynb  lower_bound_plots.ipynb  test_pusht_trained.ipynb
projects/policy-bench/src/policy_bench/: common.py  main.py  util.py
projects/policy-bench/src/policy_bench/envs/: lower_bounds.py
projects/policy-bench/src/policy_bench/methods/: diffusion_policy.py
projects/policy-eval/: pyproject.toml
projects/policy-eval/notebooks/: ddpm_ddim.ipynb  linearity.ipynb  linearity_analysis.ipynb  lower_bounds.ipynb  ot_test.ipynb
projects/policy-eval/scripts/: policy_eval
projects/policy-eval/src/policy_eval/: common.py  main.py
projects/policy-eval/src/policy_eval/lower_bounds/: stable.py
projects/policy-eval/src/policy_eval/methods/: behavior_cloning.py  diffusion_estimator.py  diffusion_policy.py  get_pt_pretrained.py  nearest_neighbor.py  pretrained.py
projects/policy-eval/src/policy_eval/methods/models/: conditional_unet1d_jax.py
