[project]
name = "argon-workspace"
version = "0.1.0"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "argon-core",
    "argon-systems[pusht,robomimic]",
    "argon-models",
    "argon-diffusion",
    "argon-algo",
    "policy-bench"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.uv.sources]
argon-core = { workspace = true }
argon-systems = { workspace = true }
argon-diffusion = { workspace = true }
argon-models = { workspace = true }
argon-algo = { workspace = true }
policy-bench = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "projects/*"]

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jax[cuda]>=0.5.0",
    "pytest>=8.3.4",
]
