[project]
name = "image-classifier"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "argon-core @ file:///${PROJECT_ROOT}/packages/core",
    "argon-models @ file:///${PROJECT_ROOT}/packages/models"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"