[project]
name = "policy-eval"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "argon-core @ file:///${PROJECT_ROOT}/packages/core",
    "argon-systems @ file:///${PROJECT_ROOT}/packages/systems",
    "argon-models @ file:///${PROJECT_ROOT}/packages/models",
    "omegaconf >= 2.3",
    "boto3 >= 1.35",
    "wandb >= 0.17",
    "dill >= 0.3.9"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
